--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -18,9 +18,14 @@
     }
   }
   
+  .counter{
+    padding: 0.75em 0;
+  }
+  
   &.max-items-reached{
     .counter{
       color: $text-error;
+      font-weight: $font-weight-bold;
     }
     .recommendations-cards-wrapper{
       display: none;
