--- a/blocks/form/components/toast/toast.scss
+++ b/blocks/form/components/toast/toast.scss
@@ -1,7 +1,8 @@
 @use "../../../../styles/settings" as *;
 
 /* Icons */
-$icon-info: "/icons/icon-toast-green-tick.svg";
+$icon-info: "/icons/icon-toast-blue-info.svg";
+$icon-success: "/icons/icon-toast-green-tick.svg";
 $icon-warning: "/icons/icon-toast-orange-warning.svg";
 $icon-error: "/icons/icon-toast-red-error.svg";
 
