feat(form) validation

--- a/styles/base/_validation.scss
+++ b/styles/base/_validation.scss
@@ -4,7 +4,7 @@ form .field-wrapper[data-required="true"]>.field-label::after {
   content: '' !important;
 }
 
-html[lang="en"] form .field-wrapper[data-required="false"]>.field-label::after {
+form .field-wrapper[data-required="false"]>.field-label::after {
   content: ' (Optional)' !important;
 }
 
