feat(form) Fix issue with field description

--- a/blocks/form/components/extended-checkbox/extended-checkbox.scss
+++ b/blocks/form/components/extended-checkbox/extended-checkbox.scss
@@ -48,7 +48,8 @@
   gap: 4px;
   padding: $spacing-400;
 
-  .field-description {
+  .field-description,
+  .field-description-2 {
     margin-inline-start: $spacing-700;
     color: $text-secondary;
 
