--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -4,7 +4,8 @@
 .search-box {
   position: relative;
 
-  .field-description {
+  .field-description,
+  .field-description-2 {
     p {
       padding-bottom: 0;
       font-weight: $font-weight-regular;
