--- a/blocks/form/components/languagepanel/languagepanel.scss
+++ b/blocks/form/components/languagepanel/languagepanel.scss
@@ -87,7 +87,8 @@
       }
     }
 
-    .field-description {
+    .field-description,
+    .field-description-2 {
       p {
         font-size: 18px;
         font-weight: 500;
