--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -63,6 +63,12 @@
   border: none;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+
+  &:focus,
+  &:focus-visible {
+    outline: none;
+    box-shadow: 0 0 0 2px $color-white, 0 0 0 4px $stroke-focus;
+  }
 }
 
 %button--primary {
@@ -131,6 +137,12 @@
     &:active {
       color: $color-primary-navy;
     }
+  }
+
+  &:focus,
+  &:focus-visible {
+    outline: none;
+    box-shadow: 0 0 0 2px $color-white, 0 0 0 4px $stroke-focus;
   }
 }
 
