--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -67,6 +67,13 @@
       text-decoration: none;
     }
 
+
+    &:focus,
+    &:focus-visible {
+      outline: none;
+      box-shadow: 0 0 0 2px $color-white, 0 0 0 4px $stroke-focus;
+    }
+
     &::after {
       content: '';
       display: inline-block;
