--- a/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
+++ b/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
@@ -5,13 +5,13 @@
   flex-wrap: wrap;
   gap: $spacing-400;
 
-  .field-description {
+  .field-description-2 {
     display: none;
     flex-basis: 100%;
   }
 
   &.field-invalid {
-    .field-description {
+    .field-description-2 {
       display: block;
     }
   }
