feat(form) validation

--- a/blocks/form/components/extended-checkbox-group/extended-checkbox-group.css
+++ b/blocks/form/components/extended-checkbox-group/extended-checkbox-group.css
@@ -1,4 +1,4 @@
 /*stylelint-disable*/
-
+.extended-checkbox-group.field-invalid > .extended-checkbox-container > .checkbox-wrapper{border-color:rgb(208, 54, 51)!important}
 
 /*# sourceMappingURL=extended-checkbox-group.css.map */
