feat(form) wait while submitting

--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -36,6 +36,10 @@
       display: none;
     }
   }
+  
+  .wizard-button-wrapper button[name=next].submitting {
+    background-color: pink;
+  }
 
   &.left {
     display: flex;
