feat(form) Implement navigating the JSP by URL

--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -26,7 +26,8 @@
     margin-left: auto;
   }
 
-  &.from-review {
+  &.from-review,
+  &.single-step {
     .field-save-changes {
       display: block;
     }
